tests/sksl/errors/Ossfuzz27663.dsl.glsl
### Compilation failed:

error: division by zero

error: type mismatch: '=' cannot operate on 'half4', 'float4'

2 errors
